--- a/templates/media-explorer.html
+++ b/templates/media-explorer.html
@@ -2,7 +2,7 @@
 <h2>{{title}}</h2>
 <p class="breadCrumb"><label ng-repeat="ad in mc.breadCrumb"></label></p>
 <md-content class="md-padding" layout="row" layout-wrap="" layout-align="center start">
-      <md-card ng-repeat="server in mc.bricks|toArray:false|filter:{type:'BrickUPnP_MediaServer'}">
+      <md-card ng-repeat="server in mc.bricks">
         <md-card-title>
           <md-card-title-text>
             <span class="md-headline">Card with image</span>
