--- a/templates/media-explorer.html
+++ b/templates/media-explorer.html
@@ -4,12 +4,7 @@
 <p class="breadCrumb"><label ng-repeat="ad in mc.breadCrumb"></label></p>
 <md-content class="md-padding" layout="row" layout-wrap="" layout-align="center start">
       <!--<md-card ng-repeat="server in mc.explorer|toArray:false|filter:{type:'BrickUPnP_MediaServer'}">-->
-      <md-card ng-repeat="dir in mc.explorer"  ng-click="mc.Browse(mc.bricks,dir.id)">
-      {{dir.id}}
+      <md-card ng-repeat="dir in mc.explorer"  ng-click="mc.Browse(brick,dir.id)">
+        {{dir.title}}
       </md-card>
-</md-content>
-
-<md-content class="directories">
-	<md-card class="directory" ng-repeat="cont in mc.containers">
-	</md-card>
 </md-content>
