--- a/templates/player.html
+++ b/templates/player.html
@@ -1,16 +1,23 @@
-<p>MON</p>
-<span ng-bind="renderer"></span>
-    <!-- Commands here -->
-    <md-button ng-click="pc.Play(renderer)">
-        Play
+<!--<span ng-bind="renderer"></span>-->
+<div layout="row">
+    <md-button class="md-fab" aria-label="Eat cake" ng-click="pc.Play(renderer)">
+        <md-icon md-svg-src="img/play.svg"></md-icon>
     </md-button>
-    <md-button ng-click="pc.Pause(renderer)">
-        Pause
+    <md-button class="md-fab" aria-label="Eat cake" ng-click="pc.Pause(renderer)">
+        <md-icon md-svg-src="img/pause.svg"></md-icon>
     </md-button>
-    <md-button class="stop" ng-click="pc.Stop(renderer)" >
-        Stop
+    <md-button class="md-fab" aria-label="Eat cake" ng-click="pc.Stop(renderer)">
+        <md-icon md-svg-src="img/stop.svg"></md-icon>
     </md-button>
-    <md-slider	ng-model="pc.volume"
-                  ng-mouseup="pc.changeVolume(pc.volume)"
-                  min="0" max="100" aria-label="volume">
-    </md-slider>
+
+    <div layout="row" layout-align="center center" class="volume">
+        <md-icon md-mini md-svg-src="img/vol_down.svg"></md-icon>
+        <md-slider	ng-model="pc.volume"
+                      ng-mouseup="pc.changeVolume(pc.volume)"
+                      min="0" max="100" aria-label="volume">
+        </md-slider>
+        <md-icon md-mini md-svg-src="img/vol_up.svg"></md-icon>
+    </div>
+</div>
+
+
