--- a/templates/media-explorer.html
+++ b/templates/media-explorer.html
@@ -1,9 +1,13 @@
-<style type="text/css"></style>
 <p class="breadCrumb">
     <label ng-repeat="ad in mec.breadCrumb" ng-click="mc.Browse(ad.dirId)">| {{ad.title}}</label>
 </p>
 <md-content class="md-padding" layout="row" layout-wrap="" layout-align="center start">
       <md-card ng-repeat="dir in context.explorer.directories"  ng-click="mec.Browse(dir.id)">
-        {{dir.name}}
+          <img ng-src="img/folder.jpg" class="md-card-image" alt="Washed Out">
+          <md-card-title>
+              <md-card-title-text>
+                  <span class="md-headline">{{dir.name}}</span>
+              </md-card-title-text>
+          </md-card-title>
       </md-card>
 </md-content>
