--- a/templates/media.html
+++ b/templates/media.html
@@ -1,6 +1,6 @@
 <md-card>
     <img ng-src="{{media.iconURL}}" class="md-card-image" alt="{{media.name}}">
     <div class="md-actions" layout="row" layout-align="center center">
-        <md-button ng-click="mc.loadMedias(brick.id,context.rendererId,media.id)">Charger ce Film</md-button>
+        <md-button class="md-fab md-mini" aria-label="Eat cake" ng-click="mc.loadMedias(brick.id,context.rendererId,media.id)"><md-icon md-svg-src="img/refresh.svg"></md-icon></md-button>
     </div>
 </md-card>
