--- a/templates/media-explorer.html
+++ b/templates/media-explorer.html
@@ -3,8 +3,7 @@
     <label ng-repeat="ad in mec.breadCrumb" ng-click="mec.Browse(ad.id)"> | {{ad.title}}</label>
 </p>
 <md-content class="md-padding" layout="row" layout-wrap="" layout-align="center start">
-    <directory dir-name="dir.name" ng-repeat="dir in context.explorer.directories" ng-click="mec.Browse(dir)">
-    </directory>
+    <directory dir-name="dir.name" ng-repeat="dir in context.explorer.directories" ng-click="mec.Browse(dir)"></directory>
 </md-content>
 <md-content class="md-padding" layout="row" layout-align="center start">
     <media ng-repeat="media in context.explorer.medias | limitTo:20"
