--- a/templates/player.html
+++ b/templates/player.html
@@ -1,15 +1,15 @@
-
-<div layout="row">
-    <md-button class="md-fab" aria-label="Eat cake" ng-click="pc.Play(context.rendererId)">
-        <md-icon md-svg-src="img/play.svg"></md-icon>
-    </md-button>
-    <md-button class="md-fab" aria-label="Eat cake" ng-click="pc.Pause(context.rendererId)">
-        <md-icon md-svg-src="img/pause.svg"></md-icon>
-    </md-button>
-    <md-button class="md-fab" aria-label="Eat cake" ng-click="pc.Stop(context.rendererId)">
-        <md-icon md-svg-src="img/stop.svg"></md-icon>
-    </md-button>
-
+<div layout="row" layout-sm="column">
+    <div layout="row">
+        <md-button class="md-fab" aria-label="Eat cake" ng-click="pc.Play(context.rendererId)">
+            <md-icon md-svg-src="img/play.svg"></md-icon>
+        </md-button>
+        <md-button class="md-fab" aria-label="Eat cake" ng-click="pc.Pause(context.rendererId)">
+            <md-icon md-svg-src="img/pause.svg"></md-icon>
+        </md-button>
+        <md-button class="md-fab" aria-label="Eat cake" ng-click="pc.Stop(context.rendererId)">
+            <md-icon md-svg-src="img/stop.svg"></md-icon>
+        </md-button>
+    </div>
     <div layout="row" layout-align="center center" class="volume">
         <md-icon md-mini md-svg-src="img/vol_down.svg"></md-icon>
         <md-slider	ng-model="pc.volume" min="0" max="100" aria-label="volume">
