--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,135 @@
 body{
     margin: 0;
 }
+
+/*BREADCRUMB*/
+
+* {
+    margin: 0;
+    padding: 0;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 12px;
+}
+
+body {
+    text-align: center;
+    background-color: #E65100;
+}
+
+h1 {
+    font-weight: 100;
+    font-size: 32px;
+    padding: 40px;
+    color: #fff;
+}
+
+#breadcrumb {
+    list-style: none;
+    display: inline-block;
+}
+#breadcrumb .icon {
+    font-size: 14px;
+}
+#breadcrumb li {
+    float: left;
+}
+#breadcrumb li a {
+    color: #FFF;
+    display: block;
+    background: #FB8C00;
+    text-decoration: none;
+    position: relative;
+    height: 40px;
+    line-height: 40px;
+    padding: 0 10px 0 5px;
+    text-align: center;
+    margin-right: 23px;
+    outline: none;
+}
+#breadcrumb li:nth-child(even) a {
+    background-color: #FFA000;
+}
+#breadcrumb li:nth-child(even) a:before {
+    border-color: #FFA000;
+    border-left-color: transparent;
+}
+#breadcrumb li:nth-child(even) a:after {
+    border-left-color: #FFA000;
+}
+#breadcrumb li:first-child a {
+    padding-left: 15px;
+    -moz-border-radius: 4px 0 0 4px;
+    -webkit-border-radius: 4px;
+    border-radius: 4px 0 0 4px;
+}
+#breadcrumb li:first-child a:before {
+    border: none;
+}
+#breadcrumb li:last-child a {
+    padding-right: 15px;
+    -moz-border-radius: 0 4px 4px 0;
+    -webkit-border-radius: 0;
+    border-radius: 0 4px 4px 0;
+}
+#breadcrumb li:last-child a:after {
+    border: none;
+}
+#breadcrumb li a:before, #breadcrumb li a:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    border: 0 solid #FB8C00;
+    border-width: 20px 10px;
+    width: 0;
+    height: 0;
+}
+#breadcrumb li a:before {
+    left: -20px;
+    border-left-color: transparent;
+}
+#breadcrumb li a:after {
+    left: 100%;
+    border-color: transparent;
+    border-left-color: #FB8C00;
+}
+#breadcrumb li a:hover {
+    background-color: #EF6C00;
+}
+#breadcrumb li a:hover:before {
+    border-color: #EF6C00;
+    border-left-color: transparent;
+}
+#breadcrumb li a:hover:after {
+    border-left-color: #EF6C00;
+}
+#breadcrumb li a:active {
+    background-color: #FF8F00;
+}
+#breadcrumb li a:active:before {
+    border-color: #FF8F00;
+    border-left-color: transparent;
+}
+#breadcrumb li a:active:after {
+    border-left-color: #FF8F00;
+}
+
+.ariane{text-align: left;margin: 5px;}
+
+li, a, p,span{
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    cursor: pointer;
+}
+
+
+/* OTHER */
+
 .brick{
     display: flex;
     flex-flow: row nowrap;
@@ -85,6 +214,7 @@ md-card-title, md-card{
 }
 img.md-card-image {
     width: 80%;
+    max-height: 200px;
     margin: 0 auto;
 }
 md-card {
