--- a/templates/media.html
+++ b/templates/media.html
@@ -1,5 +1,8 @@
-<md-card>
+<md-card layout="column">
     <img ng-src="{{media.iconURL}}" class="md-card-image" alt="{{media.name}}">
+    <md-card-title>
+        {{media.name}}
+    </md-card-title>
     <div class="md-actions" layout="row" layout-align="center center">
         <md-button class="md-fab md-mini" aria-label="Eat cake" ng-click="mc.loadMedias(brick.id,context.rendererId,media.id)"><md-icon md-svg-src="img/refresh.svg"></md-icon></md-button>
     </div>
