--- a/templates/media.html
+++ b/templates/media.html
@@ -4,6 +4,6 @@
         {{media.name}}
     </md-card-title>
     <div class="md-actions" layout="row" layout-align="center center">
-        <md-button class="md-fab md-mini" aria-label="Eat cake" ng-click="mc.loadMedias(brick.id,context.rendererId,media.id)"><md-icon md-svg-src="img/refresh.svg"></md-icon></md-button>
+        <md-button class="md-fab md-mini" aria-label="Eat cake" ng-click="mc.loadMedias(brick.id,context.rendererId,media)"><md-icon md-svg-src="img/refresh.svg"></md-icon></md-button>
     </div>
 </md-card>
